[project]
name = "datacollector"
version = "0.1.0"
description = "Command line application getting data from connected SARAD instruments and providing it to other applications"
authors = [
    {name = "Michael Strey", email = "strey@sarad.de"},
]
dependencies = [
    "click>=8.1.7",
    "click-log>=0.4.0",
    "filelock>=3.13.1",
    "pyzabbix>=1.3.1",
    "appdirs>=1.4.4",
    "schedule>=1.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
