[project]
name = "datacollector"
version = "0.1.0"
description = "Command line application getting data from connected SARAD instruments and providing it to other applications"
authors = [
    {name = "Michael Strey", email = "strey@sarad.de"},
]
dependencies = [
    "click>=8.1.7",
    "click-log>=0.4.0",
    "filelock>=3.13.1",
    "appdirs>=1.4.4",
    "schedule>=1.2.1",
    "sarad @ git+https://github.com/SARAD-GmbH/sarad.git@master",
    "paho-mqtt>=2.0.0",
    "py-zabbix>=1.1.7",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
]

[project.scripts]
datacollector = "datacollector.datacollector:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
